Relative links for github.io

--- a/css/index.less
+++ b/css/index.less
@@ -5,6 +5,7 @@
 @import "index/story";
 @import "index/featured-links";
 @import "index/news";
+@import "index/events";
 
 .biw{
   font-size: 20px;
