--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,16 @@
-.swiper-container {
+#main-slider .swiper-container {
   width: 100%;
   height: 60vh;
-  margin: 20px auto;
+  margin: 0;
   overflow: hidden;
 }
 @media (max-width: 401px) {
-  .swiper-container {
+  #main-slider .swiper-container {
+    height: 100vh;
     margin: 20px -15px 20px -15px !important;
     width: 100vw;
   }
-  .swiper-container .swiper-button-next {
+  #main-slider .swiper-container .swiper-button-next {
     opacity: .3;
     right: -15px;
     -webkit-transition: right ease 0.3s, opacity ease 0.3s;
@@ -17,7 +18,7 @@
     -o-transition: right ease 0.3s, opacity ease 0.3s;
     transition: right ease 0.3s, opacity ease 0.3s;
   }
-  .swiper-container .swiper-button-prev {
+  #main-slider .swiper-container .swiper-button-prev {
     opacity: .3;
     left: -15px;
     -webkit-transition: left ease 0.3s, opacity ease 0.3s;
@@ -25,18 +26,18 @@
     -o-transition: left ease 0.3s, opacity ease 0.3s;
     transition: left ease 0.3s, opacity ease 0.3s;
   }
-  .swiper-container:hover .swiper-button-next,
-  .swiper-container:active .swiper-button-next {
+  #main-slider .swiper-container:hover .swiper-button-next,
+  #main-slider .swiper-container:active .swiper-button-next {
     opacity: 1;
     right: 10px;
   }
-  .swiper-container:hover .swiper-button-prev,
-  .swiper-container:active .swiper-button-prev {
+  #main-slider .swiper-container:hover .swiper-button-prev,
+  #main-slider .swiper-container:active .swiper-button-prev {
     opacity: 1;
     left: 10px;
   }
 }
-.swiper-slide {
+#main-slider .swiper-slide {
   background: #fff;
   margin-right: auto;
   margin-left: auto;
@@ -47,74 +48,73 @@
   transition: opacity ease 0.5s;
 }
 @media (min-width: 768px) {
-  .swiper-slide {
+  #main-slider .swiper-slide {
     max-width: 750px;
   }
 }
 @media (min-width: 992px) {
-  .swiper-slide {
+  #main-slider .swiper-slide {
     max-width: 970px;
   }
 }
 @media (min-width: 1200px) {
-  .swiper-slide {
+  #main-slider .swiper-slide {
     max-width: 1170px;
   }
 }
-.swiper-slide h3 {
+#main-slider .swiper-slide h3 {
   color: #1d3d86;
   text-align: center;
   font-size: 2rem;
   margin-bottom: 2rem;
 }
-.swiper-slide p {
+#main-slider .swiper-slide p {
   font-size: 1.2rem;
   padding: .8rem 0;
 }
-.swiper-slide.swiper-slide-prev,
-.swiper-slide.swiper-slide-next {
+#main-slider .swiper-slide.swiper-slide-prev,
+#main-slider .swiper-slide.swiper-slide-next {
   opacity: .5;
 }
 @media (max-width: 401px) {
-  .swiper-slide {
+  #main-slider .swiper-slide {
     padding: 10px 15px 50px 15px;
-    overflow-y: scroll;
   }
-  .swiper-slide h3 {
+  #main-slider .swiper-slide h3 {
     color: #1d3d86;
     text-align: center;
     font-size: 1.4rem;
     margin-bottom: 1rem;
   }
-  .swiper-slide p {
+  #main-slider .swiper-slide p {
     font-size: 1rem;
     padding: .2rem 0;
   }
 }
-#main-fast-contacts {
-  background: #1d3d86 url('/images/contact-bg.png') top no-repeat;
+#main-slider #main-fast-contacts {
+  background: #1d3d86 url('images/contact-bg.png') top no-repeat;
   color: #fff;
   padding: 20px;
   min-height: 60vh;
 }
-#main-fast-contacts h1 {
+#main-slider #main-fast-contacts h1 {
   color: #fff;
   font-size: 3rem;
   padding-bottom: 1rem;
 }
-#main-fast-contacts a {
+#main-slider #main-fast-contacts a {
   color: #fff;
 }
-#main-fast-contacts a.phone {
+#main-slider #main-fast-contacts a.phone {
   display: block;
   font-size: 1.8rem;
   padding: .6rem 0;
 }
-#main-fast-contacts .phone-title {
+#main-slider #main-fast-contacts .phone-title {
   font-size: 1rem;
   display: block;
 }
-#main-fast-contacts .reception {
+#main-slider #main-fast-contacts .reception {
   background: #142a5c;
   border: 1px solid #fff;
   display: block;
@@ -171,6 +171,9 @@
 }
 #main-story {
   padding: 20px;
+  -webkit-box-shadow: 0 0 40px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0 0 40px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.4);
 }
 #main-story .person {
   margin-bottom: 20px;
@@ -264,81 +267,126 @@
   text-align: center;
   padding: 1rem;
 }
-#featured-links-wrapper {
-  padding: 20px 0;
+#main-featured-links {
+  padding-top: 30px;
 }
-#featured-links-wrapper h2 {
-  font-size: 2rem;
-  padding: 0 0 0 20px;
+#main-featured-links .featured-link {
+  display: block;
+  padding-top: 1rem;
+  margin-bottom: 2rem;
+  -webkit-border-radius: 5px;
+  -webkit-background-clip: padding-box;
+  -moz-border-radius: 5px;
+  -moz-background-clip: padding;
+  border-radius: 5px;
+  background-clip: padding-box;
 }
-@media (max-width: 700px) {
-  #featured-links-wrapper h2 {
-    padding: 10px;
-  }
-}
-div#featured-links {
-  padding: 20px 0 40px 20px;
-}
-@media (max-width: 700px) {
-  div#featured-links {
-    padding: 10px 0;
-  }
-}
-div#featured-links div.featured-link {
+#main-featured-links .featured-link .image {
+  background-size: contain;
   background-position: center;
-  background-size: cover;
-  color: #fff;
-  float: left;
-  display: inline-block;
-  height: 160px;
-  width: 50%;
+  background-repeat: no-repeat;
+  height: 120px;
+  width: 100%;
 }
-div#featured-links div.featured-link a:hover {
+#main-featured-links .featured-link .icon {
+  text-align: center;
+  font-size: 4rem;
+  padding: 2rem;
+}
+#main-featured-links .featured-link h5 {
+  text-align: center;
+  padding: 1rem;
+}
+#main-featured-links .featured-link .overlay {
+  background: #fff;
+  display: inline-block;
+}
+#main-featured-links .featured-link:hover {
+  background: #345092;
+  color: #fff;
   text-decoration: none;
 }
-div#featured-links div.featured-link .overlay {
-  color: #fff;
-  padding: 1rem;
-  text-align: left;
-  height: 100%;
+#main-featured-links .featured-link:hover h5 {
+  text-decoration: none;
+}
+@media (max-width: 401px) {
+  #main-featured-links .featured-link {
+    padding-top: 0;
+    margin-bottom: 1rem;
+  }
+  #main-featured-links .featured-link .image,
+  #main-featured-links .featured-link .icon {
+    display: none;
+  }
+}
+#main-featured-links .gallery {
+  background-image: url('/images/photos/main.jpg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  font-size: 2rem;
+  height: 360px;
+}
+#main-featured-links .gallery .featured-link {
+  padding-top: 140px;
+  text-align: center;
+  height: 360px;
   width: 100%;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: background ease 0.25s;
-  -moz-transition: background ease 0.25s;
-  -o-transition: background ease 0.25s;
-  transition: background ease 0.25s;
+  -webkit-transition: background ease 0.3s;
+  -moz-transition: background ease 0.3s;
+  -o-transition: background ease 0.3s;
+  transition: background ease 0.3s;
 }
-div#featured-links div.featured-link .overlay h5 {
-  background: #fff;
+#main-featured-links .gallery .overlay {
+  padding: 5px 10px;
+}
+#main-featured-links .gallery:hover {
   color: #1d3d86;
-  display: inline;
-  line-height: 150%;
+  text-decoration: none;
 }
-div#featured-links div.featured-link .overlay:hover {
-  background: rgba(255, 255, 255, 0.5);
+#main-featured-links .gallery:hover .featured-link {
+  background: rgba(52, 80, 146, 0.5);
 }
-.temp-illumintati {
-  background: url("/images/banners/illuminati.png");
+#main-featured-links .gallery:hover h5 {
+  color: #1d3d86;
+  text-decoration: none;
 }
-.temp-cat {
-  background: url("/images/banners/cat.jpg");
+#main-featured-links .wrap-zh {
+  background: #fff;
+  position: relative;
+  z-index: 5;
 }
-.temp-scincidae {
-  background: url("/images/banners/scincidae.JPG");
+#main-featured-links .wrap-shadow {
+  position: relative;
+  z-index: 3;
+  -webkit-box-shadow: 0 0 40px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0 0 40px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.4);
 }
-#main-news {
-  padding: 20px;
+#main-content .fake-bg-header {
+  background: #eee;
+  height: 60px;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  border-bottom: 4px solid #d5d5d5;
+  position: absolute;
+  width: 100%;
+  z-index: 0;
+}
+#main-content .container {
+  position: relative;
+  z-index: 1;
 }
 #main-news h2 {
-  font-size: 2rem;
-  padding: 0 0 10px 20px;
-}
-@media (max-width: 700px) {
-  #main-news h2 {
-    padding: 0;
-  }
+  background: #eee;
+  color: #000;
+  height: 60px;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6);
+  font-size: 1.5rem;
+  font-weight: bold;
+  line-height: 60px;
+  padding-left: 20px;
+  border-bottom: 4px solid #d5d5d5;
+  margin-bottom: 20px;
 }
 #main-news article {
   border-bottom: 1px solid #999;
@@ -353,7 +401,7 @@ div#featured-links div.featured-link .overlay:hover {
   }
 }
 #main-news article .left {
-  background-image: url("/images/mileline.png");
+  background-image: url("images/mileline.png");
   background-position: top;
   background-repeat: repeat-y;
   display: table-cell;
@@ -550,6 +598,110 @@ div#featured-links div.featured-link .overlay:hover {
     padding: 10px;
     width: 100%;
   }
+}
+#main-events {
+  margin-bottom: 30px;
+  width: 100%;
+}
+@media (max-width: 992px) {
+  #main-events {
+    margin-top: 30px;
+  }
+}
+#main-events header {
+  background: #ff6f51;
+  color: #fff;
+  height: 60px;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  line-height: 60px;
+  border-bottom: 4px solid #ff451e;
+}
+#main-events header .text {
+  margin-left: -15px;
+  font-size: 1.3rem;
+  position: absolute;
+  text-align: center;
+  width: 100%;
+}
+@media (max-width: 401px) {
+  #main-events header .text {
+    font-size: 1rem;
+  }
+}
+#main-events header .button {
+  font-size: 2rem;
+  text-align: center;
+  position: relative;
+  height: 60px;
+  width: 60px;
+  z-index: 1;
+}
+#main-events header .button:hover {
+  background: #ea2800;
+  border-bottom: 4px solid #b72000;
+}
+#main-events header .button.swiper-button-disabled {
+  color: #bbb;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
+}
+#main-events header .button.swiper-button-disabled:hover {
+  background: transparent;
+  border-bottom: none;
+}
+#main-events header .button-prev {
+  float: left;
+}
+#main-events header .button-next {
+  float: right;
+}
+#main-events .events-block {
+  background: #6a1200;
+  color: #fff;
+  height: 400px;
+  overflow: hidden;
+  padding: 2rem 0;
+}
+#main-events .events-block .dates {
+  margin-bottom: 1rem;
+}
+#main-events .events-block .dates .cal-icon {
+  text-align: center;
+}
+#main-events .events-block .dates .dates-event p.start {
+  font-size: 1.6rem;
+}
+#main-events .events-block .dates .dates-event p.only {
+  font-size: 1.6rem;
+  line-height: 3rem;
+}
+#main-events .events-block .dates .dates-event p.end {
+  margin-top: 6px;
+}
+#main-events .events-block .dates i {
+  font-size: 3rem;
+}
+#main-events .events-block .about {
+  text-align: left;
+  line-height: 1.27;
+  padding: 0 15px;
+}
+#main-events .events-block .more-wrapper {
+  padding: 30px 15px 0 15px;
+}
+#main-events .events-block .more-wrapper .more {
+  background: #1e0500;
+  color: #fff;
+  border: 1px solid #fff;
+  display: block;
+  text-align: center;
+  padding: 1rem 2rem;
+  margin-top: .5rem;
+  -webkit-border-radius: 5px;
+  -webkit-background-clip: padding-box;
+  -moz-border-radius: 5px;
+  -moz-background-clip: padding;
+  border-radius: 5px;
+  background-clip: padding-box;
 }
 .biw {
   font-size: 20px;
