--- a/css/layout/biw/total.less
+++ b/css/layout/biw/total.less
@@ -342,7 +342,7 @@ header#main-header{
     }
 
     #header-main-logo{
-      background-image: url("/images/logos/full.png");
+      background-image: url("images/logos/full.png");
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
@@ -462,7 +462,7 @@ footer#main-footer{
   }
 
   #footer-map{
-    background: url('/images/map.png') center no-repeat;
+    background: url('images/map.png') center no-repeat;
     height: 60vh;
     overflow: hidden;
     /*margin-left: -15px;
