--- a/css/layout/header.less
+++ b/css/layout/header.less
@@ -504,7 +504,7 @@ header#main-header{
     }
 
     #header-main-logo{
-      background-image: url("/images/logos/full.png");
+      background-image: url("images/logos/full.png");
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
@@ -563,7 +563,7 @@ header#main-header{
     }
 
     #header-main-logo{
-      background-image: url("/images/logos/full.png");
+      background-image: url("images/logos/full.png");
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
