--- a/css/index/featured-links.less
+++ b/css/index/featured-links.less
@@ -53,7 +53,7 @@
   }
 
   .gallery{
-    background-image: url('/images/photos/main.jpg');
+    background-image: url('images/photos/main.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
