--- a/css/layout/footer.less
+++ b/css/layout/footer.less
@@ -62,7 +62,7 @@ footer#main-footer{
   }
 
   #footer-map{
-    background: url('images/map.png') center no-repeat;
+    background: url('../../images/map.png') center no-repeat;
     height: 60vh;
     overflow: hidden;
     /*margin-left: -15px;
