--- a/css/layout/header.less
+++ b/css/layout/header.less
@@ -1,6 +1,6 @@
 @image-file: 'day.jpg';
-@image: 'images/photos/@{image-file}';
-@blured-image: 'images/photos/blured/@{image-file}';
+@image: '../images/photos/@{image-file}';
+@blured-image: '../images/photos/blured/@{image-file}';
 
 header#main-header{
   background-color: #fff;
@@ -50,7 +50,7 @@ header#main-header{
     }
 
     #top-logo{
-      background: url("images/logos/only-name.jpg");
+      background: url("../images/logos/only-name.jpg");
       background-size: contain;
       background-repeat: no-repeat;
       float: left;
@@ -247,7 +247,7 @@ header#main-header{
     }
 
     #header-nav-small-logo{
-      background: url("images/logos/only-name.png");
+      background: url("../images/logos/only-name.png");
       background-position: center;
       background-repeat: no-repeat;
       background-size: contain;
@@ -504,7 +504,7 @@ header#main-header{
     }
 
     #header-main-logo{
-      background-image: url("images/logos/full.png");
+      background-image: url("../images/logos/full.png");
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
@@ -563,7 +563,7 @@ header#main-header{
     }
 
     #header-main-logo{
-      background-image: url("images/logos/full.png");
+      background-image: url("../images/logos/full.png");
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
