Make links local for github.io

--- a/css/index/news.less
+++ b/css/index/news.less
@@ -1,3 +1,5 @@
+@image-path: '../../';
+
 #main-content{
   .fake-bg-header{
     background: #eee;
@@ -41,7 +43,7 @@
     }
 
     .left{
-      background-image: url("images/mileline.png");
+      background-image: url("@{image-path}images/mileline.png");
       background-position: top;
       background-repeat: repeat-y;
       display: table-cell;
