--- a/css/layout.css
+++ b/css/layout.css
@@ -1113,7 +1113,7 @@ footer#main-footer #footer-map #footer-map-popup:before {
   background: #fafafa;
 }
 .biw header#main-header.full #header-main-logo {
-  background-image: url("images/logos/full.png");
+  background-image: url("../../images/logos/full.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -1204,7 +1204,7 @@ footer#main-footer #footer-map #footer-map-popup:before {
   color: #000;
 }
 .biw footer#main-footer #footer-map {
-  background: url('images/map.png') center no-repeat;
+  background: url('../../images/map.png') center no-repeat;
   height: 60vh;
   overflow: hidden;
   /*margin-left: -15px;
