--- a/css/index/featured-links.less
+++ b/css/index/featured-links.less
@@ -1,3 +1,5 @@
+@image-path: "../../";
+
 #main-featured-links{
   padding-top: 30px;
   
@@ -53,7 +55,7 @@
   }
 
   .gallery{
-    background-image: url('images/photos/main.jpg');
+    background-image: url('@{image-path}images/photos/main.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
